[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/nodesInherited/BaseNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Tree/Nodes/Script.gd" type="Script" id=2]
[ext_resource path="res://Themes/Nodes/Script/Frame.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/Nodes/Script/SelectedFrame.tres" type="StyleBox" id=4]

[node name="Script" instance=ExtResource( 1 )]
custom_styles/frame = ExtResource( 3 )
custom_styles/selectedframe = ExtResource( 4 )
title = "Script"
slot/0/left_enabled = true
slot/0/left_color = Color( 1, 0.439216, 0.521569, 1 )
slot/0/right_color = Color( 1, 0.439216, 0.521569, 1 )
script = ExtResource( 2 )

[node name="LineEdit" parent="." index="0"]
margin_left = 10.0
margin_top = 33.0
margin_right = 191.0
margin_bottom = 57.0
[connection signal="close_request" from="." to="." method="_on_Script_close_request"]
[connection signal="dragged" from="." to="." method="_on_Script_dragged"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
